--- a/supermegaharosh.html
+++ b/supermegaharosh.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>SuperMegaHarosh</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header__wrapper">
+                <img src="./img/logo.png" alt="Logo">
+                <nav class="header__nav">
+                    <ul>
+                        <li>
+                            <a href="#">Главная</a>
+                        </li>
+                        <li>
+                            <a href="#">Услуги</a>
+                        </li>
+                        <li>
+                            <a href="#">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <section class="">
+
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrapper">
+                <p>Created by olegtemek,tac0ezz</p>
+                <div class="footer__numbers">
+                    <a href="#">+7-(705)-777-77-77</a>
+                    <a href="#">+7-(705)-777-77-77</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
+
 </html>
