--- a/supermegaharosh.html
+++ b/supermegaharosh.html
@@ -34,11 +34,21 @@
             </div>
         </div>
     </header>
-
-    <section class="">
-
+    <section class="main">
+        <div class="container">
+            <div class="container__main">
+                <div class="intro__text">
+                    <p>
+                        СУПЕРМЕГАХАРОШ, мы
+                        сделаем ваш день!
+                    </p>
+                    <h2>
+                        СУПЕРМЕГАХРОШ - эта компания была основана в городе Нур-Султан
+                    </h2>
+                </div>
+            </div>
+        </div> 
     </section>
-
     <footer class="footer">
         <div class="container">
             <div class="footer__wrapper">
